--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>339172714599-fve1rkh5mft78qlkf6nfrleqk0tu52rt.apps.googleusercontent.com</string>
+	<string>339172714599-a1jsiedi3uor4np228kttgd08r588fhs.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.339172714599-fve1rkh5mft78qlkf6nfrleqk0tu52rt</string>
+	<string>com.googleusercontent.apps.339172714599-a1jsiedi3uor4np228kttgd08r588fhs</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>339172714599-6i5vhatane6im37mfqjknh4b25l91208.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.telmi</string>
+	<string>com.telmi.native</string>
 	<key>PROJECT_ID</key>
 	<string>telmi-e3d14</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,7 +31,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:339172714599:ios:0b71d4ed6055b948870cc2</string>
+	<string>1:339172714599:ios:23ceaa148dc95ecb870cc2</string>
 	<key>DATABASE_URL</key>
 	<string>https://telmi-e3d14-default-rtdb.firebaseio.com</string>
 </dict>
