--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.6.1",
     "@types/redux-persist": "^4.0.0",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
+    "formik": "^2.4.6",
     "react": "19.0.0",
     "react-native": "0.79.0",
     "react-native-fast-image": "^8.6.3",
@@ -35,7 +36,8 @@
     "react-native-screens": "^4.10.0",
     "react-native-video": "^6.13.0",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
