--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,8 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+
+# Optional: Disable Dexing Artifact Transform desugaring.
+# Uncomment if you encounter build issues related to desugaring.
+# android.enableDexingArtifactTransform=false
