--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "generate-codegen-artifacts": "node ./node_modules/react-native/scripts/generate-codegen-artifacts.js"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^22.1.0",
     "@react-native-firebase/auth": "^22.1.0",
@@ -24,6 +24,9 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.6.1",
     "@types/redux-persist": "^4.0.0",
+    "@videosdk.live/react-native-foreground-service": "^0.0.4",
+    "@videosdk.live/react-native-incallmanager": "^0.1.3",
+    "@videosdk.live/react-native-sdk": "^0.3.3",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
     "react": "19.0.0",
@@ -32,6 +35,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-otp-entry": "^1.8.4",
+    "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-video": "^6.13.0",
