--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,6 +30,10 @@ target 'telmi' do
   # VideoSDK
   pod 'react-native-webrtc', :path => '../node_modules/@videosdk.live/react-native-webrtc'
 
+    # Add SDWebImage pods
+    pod 'SDWebImage'
+    pod 'SDWebImageWebPCoder'
+
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
