--- a/ios/Podfile
+++ b/ios/Podfile
@@ -24,6 +24,10 @@ target 'telmi' do
   # pod 'Firebase', :modular_headers => true
   # pod 'FirebaseAuth', :modular_headers => true
 
+    # Add SDWebImage pods
+    pod 'SDWebImage'
+    pod 'SDWebImageWebPCoder'
+
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
