--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.6.1",
     "@types/redux-persist": "^4.0.0",
+    "@videosdk.live/react-native-incallmanager": "^0.1.3",
+    "@videosdk.live/react-native-sdk": "^0.3.3",
     "axios": "^1.8.4",
     "formik": "^2.4.6",
     "react": "19.0.0",
@@ -37,7 +39,7 @@
     "react-native-video": "^6.13.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
-     "yup": "^1.6.1"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
